<resources>
    <string name="app_name">MLCandidate</string>
    <string name="search">Buscar</string>
    <string name="tip_to_search_tilte">Buscá Online lo que quieras</string>
    <string name="hint_to_search">Escribe aqui el producto</string>
    <string name="open_in_mercado_libre">Comprar en Mercado Libre</string>
    <string name="no_description">No Hay Descripción</string>
    <string name="chooser_title">Open in:</string>
    <string name="filter_title">Selecciona Filtros</string>
    <string name="filter_location">Ubicación</string>
    <string name="filter_select_ubication">Selecciona Ubicación</string>
    <string name="filter_condition">Condición</string>
    <string name="condition_used">Usado</string>
    <string name="condition_new">Nuevo</string>
    <string name="filter_apply">Aplicar Filtros</string>
    <string name="price_grafic">$$$$</string>
    <string name="title_cardview">Title</string>
    <string name="image_cardview">Image_cardview</string>
</resources>
